    ~lsp-rust-analyzer-open-cargo-toml~
  * Work around bug in NPM versions 7.0.0 through 7.4.1 that prevented ~lsp-install-server~ from working for NPM-based language servers.
  * Add ~lsp-lens-place-position~ with option to place code lens at end of line as default.
  * Add LanguageTool support.
  * Add Beancount support.
** Release 7.0.1
  * Introduced ~lsp-diagnostics-mode~.
  * Safe renamed ~lsp-flycheck-default-level~ -> ~lsp-diagnostics-flycheck-default-level~
  * Safe renamed ~lsp-diagnostic-package~ -> ~lsp-diagnostics-provider~
  * Dropped support for ~company-lsp~, the suggested provider is ~company-capf~.
  * Moved completion features to ~lsp-completion.el~
  * Safe renamed ~lsp-prefer-capf~ -> ~lsp-completion-provider~
  * Safe renamed ~lsp-enable-completion-at-point~ -> ~lsp-completion-enable~
** Release 7.0
  * Support for new language server - Shttps://github.com/lighttiger2505/sqls (thanks to @v2okimochi)
  * Provided automatic installers for elp/css/bash/purescript(thanks to @kiennq)
  * Configurable Rust Analyzer inlay face via ~lsp-rust-analyzer-inlay-face~.
  * Add ~lsp-headerline-breadcrumb-mode~ which shows a breadcrumb with the document symbols on headerline when enabled.
  * Add ~lsp-modeline-code-actions-mode~ which shows code actions on modeline when enabled.
  * Support for Theia-based semantic highlighting has been removed in favor of the semanticTokens protocol specified by LSP 3.16. To enable it, set ~lsp-enable-semantic-highlighting~ to ~t~.
  * ~lsp-metals~ moved into a separate repo https://github.com/emacs-lsp/lsp-metals
  * Breaking change: use alist instead of hast-tables for =lsp-gopls-env= and =lsp-yaml-schemas=.
  * Add =lsp-gopls-codelens= defcustom to configure codelenses used for golang.
  * Added =lsp-diagnose= to help users verify their performance related settings
  * Created new website https://emacs-lsp.github.io/lsp-mode/ (thanks to @ericdallo)
  * Implemented special handling of Clangd echo area.